Fix overflow of input[type="range"]

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -79,6 +79,7 @@
         color: $white;
         height: 40px;
         padding: 0 10px;
+        margin: 0;
         transition: all $trans-time-short $trans-ease;
 
         &:hover,
